# src/order/dto/index.ts
@@ -3,3 +3,8 @@ export { CancelOrderDto } from './cancel-order.dto';
 export { OrderFilterDto, OrderQueryDto } from './order-query.dto';
 export { OrderDto } from './order.dto';
 export { OrderCountDto } from './order-count.dto';
+export { OrderSummaryDto } from './order-summary.dto';
+export {
+  OrderChecklistDto,
+  UpdateOrderChecklistDto,
+} from './order-checklist.dto';
